# reasoning-distillation-grpo

./: .gitignore  CLAUDE.md  LICENSE  README.md  modal_train.py  pyproject.toml
configs/: config.yaml
results/: FINDINGS.md  gsm8k_results.json
scripts/: 01_prepare_sft_data.py  02_prepare_grpo_data.py  03_train_sft.py  04_train_grpo.py  05_evaluate.py  06_analyze_traces.py
src/: data.py  evaluation.py  reward.py  training.py
